--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -6,14 +6,55 @@
   height: 100%;
   background: rgba(49, 49, 49, 0.5);
   backdrop-filter: blur(10px);
-  &:before {
-    content: "Авиарейсы только ТУТ";
-    position: absolute;
-    font-size: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  &_logo {
+    font-size: 50px;
     font-weight: 600;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    mix-blend-mode: overlay;
+    color: rgba(255, 255, 255, 0.49);
+    margin-bottom: 40px;
+  }
+  &_btns {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+  }
+}
+.btn {
+  position: relative;
+  cursor: pointer;
+  width: 180px;
+  height: 60px;
+  border-radius: 10px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  border: 2px solid rgb(169, 169, 169);
+  overflow: hidden;
+  transition: all .8s ease;
+  color: #fff;
+  will-change: color;
+  &:before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    left: 0;
+    bottom: 0;
+    border-radius: 0 50% 50% 0;
+    background: #fff;
+    transition: all .8s ease;
+    z-index: -1;
+  }
+  &:hover {
+    color: #313131;
+    &:before {
+      width: 180%;
+      height: 110%;
+    }
   }
 }
