--- a/src/styles/flights.scss
+++ b/src/styles/flights.scss
@@ -78,7 +78,13 @@
     span {
       padding: 0;
     }
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
     input {
+      width: 100%;
       padding: 10px;
       background: none;
       border: none;
